<resources>
    <string name="app_name">தினம் ஒரு திருக்குறள்</string>
    <string name="todays_kural">இன்றைய திருக்குறள்</string>
    <string name="kuraliyal">இயல்: </string>
    <string name="kuralno">எண்: </string>
    <string name="urai">உரை: </string>
    <string name="arathupal">அறத்துப்பால்</string>
    <string name="soloman_urai"><u>சாலமன் பாப்பையா உரை:</u></string>
    <string name="mk_urai"><u>கலைஞர் மு.கருணாநிதி உரை:</u></string>
    <string name="varathu_urai"><u>மு.வரதராசனார் உரை:</u></string>
    <string name="parimal_urai"><u>பரிமேலழகர் உரை:</u></string>
    <string name="manakudavar_urai"><u>மணக்குடவர் உரை:</u></string>
    <string name="eng_exp"><u>English Explanation:</u></string>

    <!-->share the text<-->
    <string name="indraya_kural">இன்றைய திருக்குறள்</string>
    <string name="share_pal">பால்:</string>
    <string name="share_iyal">இயல்: </string>
    <string name="share_adigaram">அதிகாரம்: </string>
    <string name="share_kural">திருக்குறள்: </string>
    <string name="share_urai">உரை: </string>
    <string name="share_wid"><u>பகிர்</u></string>

    <string name="YOUR_ADMOB_APP_ID">ca-app-pub-7239546305821659~2626039592</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-7239546305821659/7223760152</string>-->
    <string name="interstitial_ad_unit_id">ca-app-pub-7239546305821659/2872795061</string>
    <string name="banner_ad_unit_id_main">ca-app-pub-7239546305821659/7223760152</string>
    <string name="banner_ad_unit_id_ss">ca-app-pub-7239546305821659/5262158830</string>
    <string name="banner_ad_unit_id_it">ca-app-pub-7239546305821659/6253954103</string>
    <string name="banner_ad_unit_aboutus">ca-app-pub-7239546305821659/2336612596</string>
    <string name="notification_time">அறிவிப்பு நேரம் : </string>
    <string name="big_font_size">பெரிய எழுத்துரு அளவு :</string>
    <string name="villaka_vurai">விளக்க உரை</string>
    <string name="stop_popup">மேல் தோன்றும் காட்சி சாளரத்தை (Popup Window) நிறுத்தவும்</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--> Test Unit ID <-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!-->Raemmadi account blocked by Google<-->
    <!--<string name="YOUR_ADMOB_APP_ID">ca-app-pub-3418152441595815~2754143473</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3418152441595815/8142201527</string>
    <string name="banner_ad_unit_id_main">ca-app-pub-3418152441595815/9629832570</string>
    <string name="banner_ad_unit_id_ss">ca-app-pub-3418152441595815/9629832570</string>
    <string name="banner_ad_unit_id_it">ca-app-pub-3418152441595815/9629832570</string>
    <string name="banner_ad_unit_aboutus">ca-app-pub-3418152441595815/9629832570</string>-->
    <string name="appwidget_text">நோவற்க நொந்தது அறியார்க்கு மேவற்க \nமென்மை பகைவர் அகத்து.</string>
</resources>
