<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context="com.atsoft.dhinamorukural.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/toplinearlayout"
        android:background="@drawable/bg"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/kural_ll"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/paltv"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:typeface="normal"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/iyaltv"
                    android:paddingLeft="10dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="Poruliyal"
                    android:layout_weight="1.5"
                    android:textColor="@android:color/black"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/kuralnotv"
                    android:textStyle="bold"
                    android:layout_gravity="right"
                    android:paddingRight="10dp"
                    android:text="kural no : 1320"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/athigaramtv"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:text="Arathupal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/thirukuraltv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingLeft="15dp"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/eng_thirukuraltv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center" />

        </LinearLayout>

        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_blue_dark"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fadeScrollbars="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_saloman"
                    android:text="@string/soloman_urai"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/exp_salamon_tv"
                    android:padding="5dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_mk"
                    android:text="@string/mk_urai"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/exp_mk_tv"
                    android:padding="5dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_varathu"
                    android:text="@string/varathu_urai"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/exp_varathu_tv"
                    android:padding="5dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_paramal"
                    android:text="@string/parimal_urai"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/exp_pari_tv"
                    android:padding="5dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_mana"
                    android:text="@string/manakudavar_urai"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/exp_manakuavar_tv"
                    android:padding="5dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_explain"
                    android:text="@string/eng_exp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/exp_english_tv"
                    android:padding="5dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/main_adView"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id_main" />

    </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@drawable/previousround_42"
            android:scaleType="center"
            app:fabSize="mini"
            app:layout_anchor="@id/toplinearlayout"
            app:layout_anchorGravity="center|start|left"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@drawable/nextround_42"
            android:scaleType="center"
            app:fabSize="mini"
            app:layout_anchor="@id/toplinearlayout"
            app:layout_anchorGravity="center|right|end"/>

    </android.support.design.widget.CoordinatorLayout>
    <ListView
        android:id="@+id/mylistview"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_key"
        android:divider="#FFFFFF"
        android:dividerHeight="1dp"
        android:smoothScrollbar="true"
        android:layout_gravity="left"/>
</android.support.v4.widget.DrawerLayout>
