<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:layout_height="400dp"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/popup_ll"
        android:orientation="vertical"
        android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/shared_ll"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todays_kural"
            android:paddingTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/blue"
            android:textStyle="bold|italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="குறள் பால் : "
                android:textSize="9sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:id="@+id/dia_paltv"
                android:gravity="center"
                android:textColor="@color/blue"
                android:typeface="normal"
                android:textStyle="normal"
                android:text="@string/arathupal"
                android:textSize="9sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kuraliyal"
                android:textSize="9sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dia_iyaltv"
                android:textSize="9sp"
                android:layout_marginLeft="4dp"
                android:textColor="@color/blue"
                android:text="பாயிரவியல்"
                android:gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/athigaram"
                android:textSize="9sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dia_athigaramtv"
                android:layout_marginLeft="4dp"
                android:textSize="9sp"
                android:textColor="@color/blue"
                android:text="கடவுள் வாழ்த்து"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kuralno"
                android:textSize="9sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dia_kuralnotv"
                android:textSize="9sp"
                android:layout_marginLeft="4dp"
                android:text="4"
                android:layout_weight=".5"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_blue_dark"/>

        <TextView
            android:id="@+id/dia_thirukuraltv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:padding="5dp"
            android:textSize="11sp"
            android:textColor="@android:color/black"
            android:text="வேண்டுதல் வேண்டாமை இலானடி சேர்ந்தார்க்கு \nயாண்டும் இடும்பை இல."
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urai"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="9sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dia_urai"
            android:layout_gravity="left"
            android:gravity="left"
            android:padding="5dp"
            android:textSize="8sp"
            android:textColor="@android:color/black"
            android:text="வேண்டுதல் வேண்டாமை இலானடி சேர்ந்தார்க்கு \nயாண்டும் இடும்பை இல."
            android:textStyle="normal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8sp"
            android:id="@+id/greatinget"
            android:hint="Enter your greeting message"/>


        <com.google.android.gms.ads.AdView
            android:id="@+id/dk_adView"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_ll"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="பகிர்"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@null"
                android:layout_weight="1"
                android:id="@+id/share_btn"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="@android:color/holo_blue_dark"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:id="@+id/exp_btn"
                android:text="விளக்க உரை"/>
        </LinearLayout>

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:clickable="true"
        android:src="@drawable/close_42"
        android:scaleType="center"
        app:layout_anchor="@id/popup_ll"
        app:fabSize="mini"
        app:layout_anchorGravity="top|end|right"/>
</android.support.design.widget.CoordinatorLayout>